trustfall_core/test_data/tests/parse_errors/tag_on_fold.parse-error.ron
Err(UnsupportedDirectivePosition("@tag", "this directive cannot appear after a @fold directive", Pos(
  line: 6,
  column: 27,
)))
